--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -5,18 +5,18 @@
 }
 
 html {
-  font-size: 10px;
+  font-size: 16px;
 }
 
 body {
-  height: 100vh;
+  /* height: 100vh;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: center; */
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: orange;
+  /* background-color: orange; */
 }
